--- a/Client/src/Assets/css/Desktop.css
+++ b/Client/src/Assets/css/Desktop.css
@@ -8,6 +8,7 @@
     background-size: cover;
     flex-wrap: wrap;
     overflow: hidden;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .CMD{
@@ -41,3 +42,24 @@
     color: #8BC34A;
   }
   
+.InfoBar{
+    background-color: rgba(34, 34, 34, 1);
+    height:4%;
+    width:100%;
+    box-shadow:0px 1px 10px black;
+    min-height:20px;
+    max-height:32px;
+    align-items:center;
+}
+.Docker{
+    background-color: rgba(46, 46, 46, 0.8);
+    height: 100%;
+    box-shadow: 1px 0px 5px black;
+    width: 7%;
+    max-width: 80px;
+    padding-top: 0%;
+    flex-direction: column;
+    min-width: 64px;
+    overflow-y: scroll;
+    justify-content: center;
+}
